# iscope-3.1

./: .gitignore  Containerfile  Dockerfile  pyproject.toml
data/: Ecoinvent_Kategorien.xlsx
src/: login.py  main.py
src/backend/: config.yaml
src/backend/prompts/: prompt.txt
src/backend/services/: example.env  explainer.py  test.ipynb  watsonx.py
src/frontend/: streamlit_main.py
